(lang dune 3.8)

(name exercises_OCaml)

(generate_opam_files true)

(source
 (github ttiagojm/OCaml-Exercises))

(authors "Tiago M")

(maintainers "Tiago M")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name exercises_OCaml)
 (synopsis "OCaml exercises")
 (description "Using OCaml for fun")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
